name:           htet2d
version:        0.1
synopsis:       yet another tetris-like game
author:         Julia Jomantaite
license:        BSD3
build-type:     Simple
cabal-version:  >= 1.8

executable htet2d
  main-is:        Tetris.hs
  build-depends:  base, random, containers, array, old-time
  hs-source-dirs: src
  GHC-Options:    -O2

library
  hs-source-dirs: src
  build-depends:  base, random, containers, array, old-time
  exposed-modules: Tetris2D, TetrisGraphics

test-suite TestAll
  type:            exitcode-stdio-1.0
  ghc-options:     -Wall -rtsopts
  build-depends:   base,
                   containers,
                   htet2d,
                   HUnit,
                   QuickCheck, 
                   tasty,
                   tasty-hunit,
                   tasty-quickcheck,
                   tasty-th
  hs-source-dirs:  tests
  main-is:         TestAll.hs
